# mxtide-core

./: .gitignore  CMakeLists.txt
src/main/cpp/: AndXTideLib.cpp  AndXTideLib.hh  Jni.cpp  Jni.h  JniStation.cpp  JniStation.h  JniString.h  JniTidesAndCurrents.cpp  LibXtide.cpp  LibXtide.h  Location.cpp  Location.h  MeasureUnit.h  Optional.h  PerfTimer.h  Station.cpp  Station.h  StationPrediction.h  StationType.h  StationTypeUtil.h  TidesAndCurrents.cpp  TidesAndCurrents.h  Unit.h  main.cpp
src/main/cpp/include/: Location.h  MeasureUnit.h  Optional.h  Station.h  StationPrediction.h  StationType.h  TidesAndCurrents.h
src/main/cpp/jni/: Jni.cpp  Jni.h  JniArrayList.h  JniStation.cpp  JniStationPrediction.cpp  JniTidesAndCurrents.cpp  JniTidesAndCurrents.h
src/main/cpp/lib/: tcdConfig.cmake  xtideConfig.cmake
src/main/cpp/lib/tcd/: tide_db.c
src/main/cpp/lib/xtide/: Station.cc  libxtide.hh  tide.cc  xml_l.cc
